<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/dark_blue"
    tools:context=".view.fragments.frm_Call_Client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_client_content"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/large_margin"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtClientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_client_name"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_phone_number"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/txt_call" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <ListView
            android:id="@+id/listVwClientContact"
            android:layout_width="match_parent"
            android:layout_height="403dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <Button
            android:id="@+id/btnBackClientContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_back"
            app:cornerRadius="5dp"
            android:layout_marginEnd="@dimen/marginx_bottons"
            android:layout_marginStart="@dimen/marginx_bottons"
            android:backgroundTint="@color/dark_blue"/>
    </LinearLayout>

</FrameLayout>