<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.act_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBackToStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00000000"
                    android:drawableLeft="@drawable/btn_back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="33dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_register"
                    android:textSize="@dimen/titles_size"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/commun_margin"
            android:layout_marginEnd="@dimen/commun_margin">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_id_number"
                android:textColor="@color/black"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_user_name"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_size" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone_number"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/commun_margin" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/commun_margin" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/commun_margin" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_confirm_password"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/common_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin" />

            <Button
                android:id="@+id/btnSingUpLawyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/btn_register"
                app:cornerRadius="5dp"
                android:layout_marginEnd="@dimen/marginx_bottons"
                android:layout_marginStart="@dimen/marginx_bottons"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>